# substream-core

./: .env.dist  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
shared/: Cargo.toml
shared/src/: lib.rs
task-chunk-video/: Cargo.toml
task-chunk-video/src/: main.rs
task-embed-video/: Cargo.toml
task-embed-video/src/: main.rs
task-extract-sound/: Cargo.toml
task-extract-sound/src/: main.rs
task-generate-subtitle/: Cargo.toml
task-generate-subtitle/src/: main.rs
task-get-video/: Cargo.toml
task-get-video/src/: main.rs
task-resize-video/: Cargo.toml
task-resize-video/src/: main.rs
task-resume-video/: Cargo.toml
task-resume-video/src/: main.rs
task-transform-subtitle/: Cargo.toml
task-transform-subtitle/src/: main.rs
