[workspace]
members = [
    "shared",
    "task-get-video",
    "task-extract-sound",
    "task-generate-subtitle",
    "task-transform-subtitle",
    "task-resize-video",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["clmntgbr"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# RabbitMQ client
lapin = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
futures = "0.3"

