[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# S3
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.50"
aws-credential-types = "1.2"
aws-smithy-types = "1"

[dev-dependencies]
tokio-test = "0.4"

