[package]
name = "task-embed-video"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio.workspace = true
lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
futures.workspace = true
aws-sdk-s3 = "1"
tokio-util = { version = "0.7", features = ["codec"] }
