[package]
name = "task-generate-subtitle"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }

